eh22 design: fix firefox CSS-filter + z-index rendering bug

--- a/resources/assets/themes/theme19/_base.scss
+++ b/resources/assets/themes/theme19/_base.scss
@@ -544,6 +544,7 @@ div.choices__list--dropdown > div.choices__list > div.choices__item--selectable 
   border-color: var(--color-glow-primary);
   outline: none;
   box-shadow: none;
+  z-index: 1022;
   filter: var(--filter-glow-primary);
   transition: var(--transition-glow);
 }
